syntax = "proto3";

package pylon.rpc.gateway.v1.dispatch;
option java_multiple_files = true;
option go_package = "up.lol/pylon/rpc/go/rpc/gateway/v1/dispatch";

import "discord/v1/event.proto";

message EventResponse {}

message InteractionEventResponse {}

service GatewayDispatch {
  rpc GuildCreate(pylon.rpc.discord.v1.event.GuildCreateEvent)
      returns(EventResponse);
  rpc GuildUpdate(pylon.rpc.discord.v1.event.GuildUpdateEvent)
      returns(EventResponse);
  rpc GuildDelete(pylon.rpc.discord.v1.event.GuildDeleteEvent)
      returns(EventResponse);
  rpc PresenceUpdate(pylon.rpc.discord.v1.event.PresenceUpdateEvent)
      returns(EventResponse);
  rpc GuildMemberAdd(pylon.rpc.discord.v1.event.GuildMemberAddEvent)
      returns(EventResponse);
  rpc GuildMemberUpdate(pylon.rpc.discord.v1.event.GuildMemberUpdateEvent)
      returns(EventResponse);
  rpc GuildMemberRemove(pylon.rpc.discord.v1.event.GuildMemberRemoveEvent)
      returns(EventResponse);
  rpc ChannelCreate(pylon.rpc.discord.v1.event.ChannelCreateEvent)
      returns(EventResponse);
  rpc ChannelUpdate(pylon.rpc.discord.v1.event.ChannelUpdateEvent)
      returns(EventResponse);
  rpc ChannelDelete(pylon.rpc.discord.v1.event.ChannelDeleteEvent)
      returns(EventResponse);
  rpc ChannelPinsUpdate(pylon.rpc.discord.v1.event.ChannelPinsUpdateEvent)
      returns(EventResponse);
  rpc GuildRoleCreate(pylon.rpc.discord.v1.event.GuildRoleCreateEvent)
      returns(EventResponse);
  rpc GuildRoleUpdate(pylon.rpc.discord.v1.event.GuildRoleUpdateEvent)
      returns(EventResponse);
  rpc GuildRoleDelete(pylon.rpc.discord.v1.event.GuildRoleDeleteEvent)
      returns(EventResponse);
  rpc MessageCreate(pylon.rpc.discord.v1.event.MessageCreateEvent)
      returns(EventResponse);
  rpc MessageUpdate(pylon.rpc.discord.v1.event.MessageUpdateEvent)
      returns(EventResponse);
  rpc MessageDelete(pylon.rpc.discord.v1.event.MessageDeleteEvent)
      returns(EventResponse);
  rpc MessageDeleteBulk(pylon.rpc.discord.v1.event.MessageDeleteBulkEvent)
      returns(EventResponse);
  rpc MessageReactionAdd(pylon.rpc.discord.v1.event.MessageReactionAddEvent)
      returns(EventResponse);
  rpc MessageReactionRemove(
      pylon.rpc.discord.v1.event.MessageReactionRemoveEvent)
      returns(EventResponse);
  rpc MessageReactionRemoveAll(
      pylon.rpc.discord.v1.event.MessageReactionRemoveAllEvent)
      returns(EventResponse);
  rpc MessageReactionRemoveEmoji(
      pylon.rpc.discord.v1.event.MessageReactionRemoveEmojiEvent)
      returns(EventResponse);
  rpc TypingStart(pylon.rpc.discord.v1.event.TypingStartEvent)
      returns(EventResponse);
  rpc VoiceStateUpdate(pylon.rpc.discord.v1.event.VoiceStateUpdateEvent)
      returns(EventResponse);
  rpc VoiceServerUpdate(pylon.rpc.discord.v1.event.VoiceServerUpdateEvent)
      returns(EventResponse);
  rpc InviteCreate(pylon.rpc.discord.v1.event.InviteCreateEvent)
      returns(EventResponse);
  rpc InviteDelete(pylon.rpc.discord.v1.event.InviteDeleteEvent)
      returns(EventResponse);
  rpc GuildBanAdd(pylon.rpc.discord.v1.event.GuildBanAddEvent)
      returns(EventResponse);
  rpc GuildBanRemove(pylon.rpc.discord.v1.event.GuildBanRemoveEvent)
      returns(EventResponse);
  rpc GuildEmojisUpdate(pylon.rpc.discord.v1.event.GuildEmojisUpdateEvent)
      returns(EventResponse);
  rpc GuildIntegrationsUpdate(
      pylon.rpc.discord.v1.event.GuildIntegrationsUpdateEvent)
      returns(EventResponse);
  rpc WebhooksUpdate(pylon.rpc.discord.v1.event.WebhooksUpdateEvent)
      returns(EventResponse);
  rpc IntegrationCreate(pylon.rpc.discord.v1.event.IntegrationCreateEvent)
      returns(EventResponse);
  rpc IntegrationUpdate(pylon.rpc.discord.v1.event.IntegrationUpdateEvent)
      returns(EventResponse);
  rpc IntegrationDelete(pylon.rpc.discord.v1.event.IntegrationDeleteEvent)
      returns(EventResponse);
  rpc InteractionCreate(pylon.rpc.discord.v1.event.InteractionCreateEvent)
      returns(InteractionEventResponse);
}
